# mise-lib-template

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mise.toml
.claude/commands/: adapt.md  upgrade.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development-guide.template.md  infrastructure.template.md  user-guide.md
mise-tasks/: clean  install  publish-templates  publish-templates-rc  run  scaffold  test  upversion
mise-tasks/docker/: build  run  test
mise-tasks/format/: _default  check
mise-tasks/lint/: _default  fix
mise-tasks/publish/: _default  rc
mise-tasks/templates/: list  publish  publish-rc  test
mise-tasks/version/: _default  next
templates/: README.md
templates/go/: CLAUDE.md.append  go.mod  main.go  mise.toml
templates/odin/: .releaserc.json  CLAUDE.md.append  mise.toml
templates/pnpm/: mise.toml  package.json
templates/rust/: .releaserc.json  CLAUDE.md.append  Cargo.toml  install.sh.template  mise.toml
templates/rust/docs/: development-guide.template.md
templates/rust/mise-tasks/: clean  install  run  test
templates/rust/mise-tasks/docker/: run  test
templates/rust/mise-tasks/format/: _default  check
templates/rust/mise-tasks/lint/: _default  fix
templates/rust/mise-tasks/publish/: _default  rc
templates/rust/mise-tasks/version/: _default
templates/rust/src/: lib.rs  main.rs
templates/uv/: mise.toml  pyproject.toml
templates/zig/: .releaserc.json  mise.toml  (+2 more)
test/: docker.bats  scaffold-templates.bats  scaffold.bats  template-export.bats
(+70 files in other folders)
